--- a/css/custom.css
+++ b/css/custom.css
@@ -18,10 +18,10 @@ p {
     text-align: justify;
 }
 
-.carousel-caption {
+/*.carousel-caption {*/
 /*    position: relative;*/
     
-}
+/*}*/
 
 /*.carousel-caption > p {*/
 /*    display: block;*/
@@ -33,6 +33,8 @@ p {
     transform: translateY(-60%);
 */
 /*}*/
+
+/*Carousel text sizing*/
 @media screen and (max-width: 768px) {
     .carousel-caption > p {
         transform: translateY(30%);
@@ -59,6 +61,47 @@ p {
     }
     
 }
+
+.card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.card.active .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card img, .card-img-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  top:0;left:0;right:0;
+}
+
+.card-body {
+  transform: rotateY(180deg);
+  background:blue;
+  color:white;
+}
+
+
+
+
+
+
+
 
 
 /*
