--- a/css/custom.css
+++ b/css/custom.css
@@ -18,21 +18,6 @@ p {
     text-align: justify;
 }
 
-/*.carousel-caption {*/
-/*    position: relative;*/
-    
-/*}*/
-
-/*.carousel-caption > p {*/
-/*    display: block;*/
-  
-    
-/*
-    text-align: center;
-    top: 60%;
-    transform: translateY(-60%);
-*/
-/*}*/
 
 /*Carousel text sizing*/
 @media screen and (max-width: 768px) {
@@ -61,17 +46,16 @@ p {
     }
     
 }
+/*End Carousel text sizing*/
 
+/*Card flip for Conception page - Picture on front, description and genre on back*/
 .conception-cards .card {
   background-color: transparent;
   width: 300px;
   height: 300px;
   perspective: 1000px;
-/*  transform: rotateX(0deg);*/
+  transform: rotateX(0deg);
   -moz-backface-visibility: hidden;
-
-
-
 }
 
 .conception-cards .card-inner {
@@ -92,7 +76,9 @@ p {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  top:0;left:0;right:0;
+  top:0;
+  left:0;
+  right:0;
 }
 
 .conception-cards .card-body {
