--- a/css/custom.css
+++ b/css/custom.css
@@ -45,84 +45,45 @@ p {
         font-size: 150%;
     }
     
-}
-/*End Carousel text sizing*/
+} /*End Carousel text sizing*/
 
 /*Card flip for Conception page - Picture on front, description and genre on back*/
 .conception-cards .card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
-  transform: rotateX(0deg);
-  -moz-backface-visibility: hidden;
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+    /*Firefox workaround */
+    transform: rotateX(0deg);
+/*    -moz-backface-visibility: hidden;*/
 }
 
 .conception-cards .card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    transform: rotateX(0deg);
 }
 
 .conception-cards .card.active .card-inner {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .conception-cards .card img, .card-img-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  top:0;
-  left:0;
-  right:0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    top:0;
+    left:0;
+    right:0;
 }
 
 .conception-cards .card-body {
-  transform: rotateY(180deg);
-  background:blue;
-  color:white;
+    transform: rotateY(180deg);
+    background:blue;
+    color:white;
 }
-
-
-
-
-
-
-
-
-
-/*
-flip card
-*/
-/*
-.card-flip > div {
-  backface-visibility: hidden;
-  transition: transform 300ms;
-  transition-timing-function: linear;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  display: flex;
-}
-
-.card-front {
-  transform: rotateY(0deg);
-}
-
-.card-back {
-  transform: rotateY(180deg);
-  position: absolute;
-  top: 0;
-}
-
-.card-flip:hover .card-front {
-  transform: rotateY(-180deg);
-}
-  
-.card-flip:hover .card-back {
-  transform: rotateY(0deg);
-}*/
